--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,8 @@
 en:
   title: Facebook like Website
   profile:
+    submit: Update
+    edit: Edit Profile
     link: Profile
     avatar:
       new: Upload Avatar
