Removed File Upload

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,5 +6,6 @@ en:
     edit: Edit Profile
     link: Profile
     avatar:
+      msg: 'How to setup my avatar ?'
       new: Upload Avatar
       upload: Upload
